crucible-concurrency/examples/cbl/threads_ids.out.good
[Crux] Attempting to prove verification conditions.
[Crux] Found counterexample for verification goal
[Crux]   examples/cbl/threads_ids.cbl:14:5: error: in main
[Crux]   Positive counter
